cmake_minimum_required(VERSION 3.21)
project(atividade3)

set(CMAKE_CXX_STANDARD 14)

add_executable(atividade3
        main.cpp
        util.cpp
        hamburguer.cpp
        japonesa.cpp
        pedido.cpp
        pizza.cpp
        produto.cpp
        venda.cpp
        hamburguer.hpp
        japonesa.hpp
        pedido.hpp
        pizza.hpp
        produto.hpp
        hamburguer.hpp
        venda.hpp
        )
